test(appkit): prove native surface transitions and harness